# cms-admin-server

./: .env  Cargo.toml  README.md
migrations/2020-08-04-020933_create_user/: up.sql
migrations/2020-08-04-224223_roles_permissions/: down.sql  up.sql
migrations/2020-08-24-235708_create_jwt_disallow_list/: down.sql  up.sql
src/: jwt.rs  main.rs  schema.rs
src/api/: content.rs  mod.rs
src/api/model/: api_response.rs  mod.rs
src/api/routes/: auth.rs
src/database/: mod.rs
