[package]
name = "cms-admin-server"
version = "0.1.0"
authors = ["jacobalbright <jacob.albright23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
dotenv = "0.15"
env_logger = "0.7"
log = "0.4.11"

argonautica = "0.2.0"
jsonwebtoken = "7.2.0"

futures = "0.3.1"
actix-multipart = "0.2.0"
bytes = { version = "0.5", features = ["serde"] }

sanitize-filename = "0.2"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }